--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
     "jest": "^27.3.1",
+    "jest-location-mock": "^1.0.9",
     "lint-staged": "^11.2.3",
     "pinst": "^2.1.6",
     "prettier": "^2.4.1",
