--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 sphinx==3.4.3
 sphinx_autodoc_typehints==1.12.0
 sphinx_autodoc_defaultargs==0.1.2
-sphinxcontrib-osexample==0.1.1.dev0
+sphinx-tabs
 git+https://github.com/sphinx-contrib/video.git
