--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,3 +3,4 @@ sphinx_autodoc_typehints==1.12.0
 sphinx_autodoc_defaultargs==0.1.2
 sphinx-tabs
 git+https://github.com/sphinx-contrib/video.git
+jsx-lexer
